Fixed: Bug OXUIB-273 Cannot scroll appointment details on iOS when opened the second time

--- a/ui/apps/themes/components/core.less
+++ b/ui/apps/themes/components/core.less
@@ -290,7 +290,7 @@ div.hopscotch-bubble {
 
 /* scrollable for touch devices, esp. iOS */
 .scrollable {
-    overflow: auto !important;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
     -webkit-tap-highlight-color: transparent;
 }
